--- a/index.html
+++ b/index.html
@@ -917,8 +917,8 @@
                         <li class="dropdown">
                             <a href="/blog/"><i class="fas fa-list"></i> योजनाएं <i class="fas fa-chevron-down"></i></a>
                             <ul class="dropdown-menu">
-                                <li><a href="/blog/central-government.html/">केंद्र सरकार</a></li>
-                                <li><a href="/blog/state-government.html/">राज्य सरकार</a></li>
+                                <li><a href="central-government.html/">केंद्र सरकार</a></li>
+                                <li><a href="state-government.html/">राज्य सरकार</a></li>
                                 <li><a href="/blog/latest-schemes/">नवीनतम योजनाएं</a></li>
                             </ul>
                         </li>
